--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,6 @@
         android:id="@+id/txtId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:editable="false"
         android:ems="10"
         android:hint="id"
         android:inputType="textPersonName"
@@ -72,9 +71,11 @@
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
+        android:background="#2196F3"
         android:text="Lưu"
+        android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtYear" />
+        app:layout_constraintTop_toBottomOf="@+id/btnFind" />
 
     <Button
         android:id="@+id/btnDelete"
@@ -83,8 +84,32 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:text="Xóa"
+        android:background="#F44336"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/btnSave"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnSave" />
+
+    <Button
+        android:id="@+id/btnFind"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:text="Tìm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtYear" />
+
+    <Button
+        android:id="@+id/btnEmpty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:text="Rỗng"
+        app:layout_constraintBottom_toBottomOf="@+id/btnFind"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnFind" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
